--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
         </div>
         <!-- game screen ------------------------------------------------>
-      <div class="game">
+      <div class="game hide">
         <div class="top">
           <button class="restart border">Restart</button>
           <span>Between 1 and 50</span>
         </div>
-        <h1>✨ Guess the Number! ✨</h1>
+        <h1>Guess the Number!</h1>
         <h2 class="secretNumber border">?</h2>
         <!-- input and scores ------------------------------------------------>
         <div class="play">
